--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.3",
+    "react-native-reanimated": "^2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^13.4.0"
