--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "@shopify/flash-list": "^1.4.0",
     "axios": "^0.26.0",
     "moment": "^2.29.4",
     "react": "18.1.0",
